# nastyware-analyser

./: .gitmodules  README.md  analyser  todo
damicore-python/results/: final.clusters  ncd-matrix.phylip  tree.newick
docs-scrapping/: documented-libraries.csv  export-files-to-description-format.py  gather-all-function-description.ipynb  microsoft-docs-headers-list.html  parse-all-library-docs.py  parse-single-library-doc.ipynb  save-all-library-docs.ipynb
imports/: README.md
malware-datasource/: .gitignore  .gitmodules  README.md  asdf.csv  fetch_malware_source_header.py  generate_data  generate_datasource  generate_datasource.py  index.html  malware_sources.json  prepare_malware_sources.py  requirements.txt
malware-datasource/damicore/: ChangeLog  NEWS
malware-datasource/malware-bazaar/: .gitignore  .gitmodules  dataset.csv  generate_data  information.csv  requirements.txt
malware-datasource/malware-bazaar/damicore/: .gitignore  .gitmodules  AUTHORS  ChangeLog.md  bootstrap.sh  configure.ac
malware-datasource/malware-bazaar/damicore/doc/: Makefile.am
malware-datasource/malware-bazaar/damicore/script/: damicore  figtree
malware-datasource/malware-bazaar/damicore/src/: Makefile.am  csv-colfiles  csv-format  csv-lineswap  csv-rowmajor.c  debug.h  dftool.c  dftool.h  unused.c
malware-datasource/malware-bazaar/damicore/third/: FigTree_v1.4.4.tgz  Makefile.am
malware-datasource/malware-bazaar/damicore/third/community/: community  community-conv
malware-datasource/malware-bazaar/damicore/third/phylip-3.697/src/: neighbor  phylip.h
nastyware_analyser/: download.py  imports.py  stats.py
pe-analyser/: .gitignore  README.md  accuracy-epsilon-curve.py  asdf.ipynb  asdf.py  asdf2.py  create-phylip-coss-distance.py  create-phylip-hamming-distance.py  create_yara_rules.py  export-new-format-damicore-files.ipynb  export_step_by_step_information.ipynb  feature_names.txt  file-lower.py  file-rename.py  file-splitter.py  file-strip-lines.py  find_minus_functions.py  find_plus_functions.py  ncd-matrix.phylip  node_clustering.txt  node_clustering_edge_betweenness.txt  node_clustering_f.txt  node_clustering_fastgreedy.txt  node_clustering_fastgreedy_1.txt  node_clustering_leading_eigenvector.txt  optimize_identification.py  out  pack-result.bat  pe-analyser.py  pe-similarities.py  phylo-color.py  plus_minus_create_yara_rules.py  poc-classificacao-por-clusterizacao.ipynb  rename-files.py  rules_1.yar  rules_10.yar  rules_2.yar  rules_3.yar  rules_4.yar  rules_5.yar  (+31 more)
pe-analyser/analysis/: cluster-common-functions.txt  cluster-different-functions.txt  minus_functions.txt
pe-analyser/cluster/: R-Lockbit.sample
pe-analyser/damicore/: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure
pe-analyser/damicore-python/: .gitignore  cld.py  constants.py  damicore-cld.py  damicore.py  ncd.py  tree_simplification.py
pe-analyser/damicore/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
pe-analyser/damicore/doc/: Makefile  Makefile.in
pe-analyser/damicore/examples/: README  ab.sh
pe-analyser/damicore/script/: Makefile  Makefile.am  Makefile.in
pe-analyser/damicore/src/: Makefile  Makefile.in  README  csv-average  csv-lineswap.c  csv-rowmajor  csv-sort  dftool.c
pe-analyser/damicore/src/.deps/: csv-average.Po  csv-colfiles.Po  csv-format.Po  csv-lineswap.Po  csv-rowmajor.Po  csv-sort.Po  dftool.Po  lineshuffle.Po
pe-analyser/damicore/third/: Makefile  Makefile.in
pe-analyser/damicore/third/community/: Makefile  newman.c  newman.h
pe-analyser/damicore/third/ncd/: Makefile  Makefile.in  config.status  configure
pe-analyser/damicore/third/ncd/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
pe-analyser/damicore/third/ncd/src/: Makefile  Makefile.in  config.h  config.h.in
pe-analyser/damicore/third/ncd/src/.deps/: bzlib.Po  compressors.Po  doncd.Po  fileop.Po  mat.Po  ncd.Po  zlib.Po
pe-analyser/damicore/third/ncd/src/ppmd/.deps/: Alloc.Po  CpuArch.Po  Ppmd7.Po  Ppmd7Enc.Po  export.Po
pe-analyser/damicore/third/phylip-3.697/src/: drawgram.c  phylip.c
pe-analyser/data/: .gitignore  README.md  inspect.ipynb  out_1  out_2  out_3  out_4
pe-analyser/executable-functions/: G-00D19CD  G-01BEA0F  G-0D70A50  G-1D68F2D  G-2CC3CFE  G-2D9D73A  G-3A8AA14  G-3AD15CB  G-3AF9A2F  G-3B4A4ED  G-3E6BBB2  G-4D00255  G-6A7DB09  G-6BB83DB  R-0149D19  R-202BF3E  R-211B02E  R-229F975  R-410FF84  R-442C2BD  R-442E72A  R-551C3E1  R-56A1E03  R-65E1B5A  R-67E773E  R-76C966B  R-780D8A8  R-781D436  R-83D8EAF  R-87AF6AD  R-90C4391
pe-analyser/executable-functions-tmp/: G-00D19CD  G-01BEA0F  G-0234554  G-03320EF  G-038B837  G-040A8A8  G-063333E  G-068A65F  G-082B4C2  G-0A7F21A  G-0B9ECF7  G-0D70A50  G-10B33B0  G-10F6D37  G-1224F0F  G-1459147  G-1933034  G-1C41D32  G-1D68F2D  G-20F6D03  G-21081FE  G-222C055  G-24007BF  G-2588B4B  G-26E145D  G-2CC3CFE  G-2D9D73A  G-2DD0338  G-2E09539  G-3124C9F  G-3133CE1  G-3192ED9  G-333C00F  G-3704A1B  G-3A8AA14  G-3AF9A2F  G-3B4A4ED  G-3C96690  G-3C970B9  G-3F59270  (+425 more)
pe-analyser/notebooks/: export_step_by_step_information.ipynb  poc-classificacao-por-clusterizacao.ipynb
pe-analyser/pe_analyser/: file_operation.py  progress_bar.py
pe-analyser/rule_generation/: decision_tree.ipynb  estrutura-regra-gerada.txt  tf_idf_decision_tree.ipynb  tf_idf_decision_tree.py
pe-analyser/scripts/: accuracy-epsilon-curve.py  accuracy_epsilon_curve.py  batch_performance_test.py  batch_performance_test_utils.py  create-phylip-coss-distance.py  create-phylip-random-distance.py  create_phylip_coss_distance.py  export_new_format_import_files.py  file-randomize-lines.py  file-strip-lines.py  join-lines-newick-file.py  library-usage-histogram.py  tmp.py
pe-analyser/tmp_analysis/: optimal_plus_functions.txt  plus_functions.txt
pe-analyser/tmp_cluster/: R-LockBit_14_02_2021.sample
pe-analyser/utility-scripts/: file-lower.py
pe-datasource/: compress-existing-pe-files.ps1  copy-pe-files.ps1  copy-pe-files.sh  zip_found_files.ps1
samples/: README.md
(+5588 files in other folders)
